# opengl-playground

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
include/: constants.hpp  glfw_utils.hpp  utils.hpp
include/OpenGL/: gl.hpp
include/glad/: glad.h
include/opengl/: gl.hpp
src/: glad.c  glfw_utils.cpp  main.c  main.cpp  utils.cpp
src/GLAD/: glad.c
src/GLADs/: glad.c
src/OpenGL/: gl.cpp
src/Shaders/: fragment_shader.glsl
src/glfw/: glfw_utils.cpp
src/headers/: constants.hpp  utils.hpp
src/opengl/: gl.cpp
src/shaders/: vertex_shared.glsl
